--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <h1>My Google Map</h1>
   <div id="map"></div>
   
+  
+  <script src="index.js"> </script>
+  
   <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWrSDfnrFbb_ddWaVjoD5hjtxYcT_VKlc&callback=initMap">
     </script>
