--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="index.js"> </script>
 </head>
 <body>
-  <h1>My Google Map</h1>
+<!--   <h1>My Google Map</h1> -->
   <div id="map"></div>
 
 
